# amp

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  AGENTS.md  BENCHMARKING.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ELI5.md  LICENSE  RATELIMIT_IMPLEMENTATION_PLAN.md  README.md  SPEC.md  TESTING_AMP_INIT.md  VERSIONING.md  astro.config.ts  config.md  config.sample.toml  configuration.md  docker-compose.yaml  eslint.config.mjs  failed_transactions_implementation_plan.md  flake.nix  glossary.md  justfile  my_config.toml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.build.json  tsconfig.json  udfs.md  vitest.config.ts
admin-api/: Cargo.toml  README.md
admin-api/src/: ctx.rs  deploy.rs  error.rs  handlers.rs  job_scheduler.rs  lib.rs  scheduler.rs
client/: Cargo.toml
client/src/: decode.rs  lib.rs
common/: Cargo.toml
common/src/: arrow_helpers.rs  attestation.rs  cdc_helpers.rs  config.rs  dataset_context.rs  env_substitute.rs  js_udf.rs  lib.rs  manifest.rs  multirange.rs  notification_multiplexer.rs  plan_visitors.rs  query_context.rs  sql_visitors.rs  store.rs  stream_helpers.rs  streaming_query.rs  tests.rs  tracing.rs  tracing_helpers.rs
crates/arrow-to-postgres/: Cargo.toml
crates/client/: Cargo.toml
crates/config/: Cargo.toml
crates/parquet-ext/: Cargo.toml  README.md
dataset-store/: Cargo.toml
dataset-store/src/: lib.rs  providers.rs  sql_datasets.rs
dump/: Cargo.toml  README.md
dump-check/: Cargo.toml
dump-check/src/: job.rs  lib.rs  main.rs  metrics.rs  stats.rs  ui.rs
dump/src/: block_ranges.rs  client.rs  collector.rs  compaction.rs  compactor.rs  core.rs  job.rs  job_partition.rs  lib.rs  main.rs  metrics.rs  operator.rs  parquet_writer.rs  streaming_query.rs  tests.rs  worker.rs
evm-rpc-datasets/: Cargo.toml
evm-rpc-datasets/src/: README.md  client.rs  lib.rs
extractors/eth-beacon-datasets/: Cargo.toml
extractors/substreams-datasets/: Cargo.toml  README.md  build.rs
firehose-datasets/: Cargo.toml  build.rs
firehose-datasets/examples/: dump.rs
firehose-datasets/src/: client.rs  dataset.rs  lib.rs
generate-manifest/: Cargo.toml
generate-manifest/src/: lib.rs
http-auth/: Cargo.toml
http-auth/src/: lib.rs  models.rs
metadata-db/: CONTRIBUTING.md  Cargo.toml  SECURITY.md
metadata-db/migrations/: 20241021142330_initial.sql  20250518224304_object_meta.sql  20250520162031_add_job_status.sql  20250618192150_add_file_stats.sql  20250708202324_add_footer_bytes.sql  20250711162314_add_start_block_to_locations.sql  20250718203441_add_metadata_db.sql  20250801022051_add_file_leases.sql  20250804171053_add_gc_manifest.sql
metadata-db/src/: conn.rs  jobs.rs  lib.rs  locations.rs  registry.rs  stream_helper.rs  temp.rs  temp_metadata_db.rs  test_utils.rs  workers.rs
metadata-db/tests/: it_db_jobs.rs  it_db_workers.rs  it_workers_events.rs  it_workers_heartbeat.rs  it_workers_jobs.rs
monitoring/: Cargo.toml
monitoring/src/: lib.rs  logging.rs
nozzle/: Cargo.toml  build.rs
nozzle/src/: dev.rs  dump.rs  dump_cmd.rs  main.rs  server.rs
python/: FlightSql_pb2.py  Makefile  README.md  client.py  client_example.py  data_catalog_visualization.html  getting-started.ipynb  performance_benchmarks.json  pool_created.ipynb  pyproject.toml  test.py  util.py
python/apps/: execute_query.py  query_cli.py
python/docs/: implementing_data_loaders.md  performance_testing.md  working_with_delta_lake.md
python/examples/: Untitled.ipynb  client_example.py  daily_dai_transfer_counts.py  daily_lusd_transfers.py  daily_weth_transfers.py  example_nozzle_view.py  example_weth_counts_df.py  example_weth_counts_sql.py  getting-started.ipynb  live_demo 😬.ipynb  pool_created.ipynb
python/notebooks/: block_explorer_queries.py  marimo_example_nb.py  test_loaders.py
python/nozzle/: README.md  abi.py  address.py  base_contract.py  chains.py  client.py  commands.py  contract.py  contract_registry.py  contracts.py  dag.py  dataset_registry.py  event.py  event_parameter_registry.py  event_registry.py  graph_view.py  manage_contracts.py  preprocessor.py  registered_contract.py  registered_event.py  registered_table.py  registry_manager.py  schedule.py  scheduler.py  table.py  table_registry.py  table_registry_dynamic.py  tables.py  util.py  view.py  view_dag.py  view_registry.py
python/plans/: data_loader_architecture.md
python/scripts/: quick_delta_setup.py
python/tests/: conftest.py  delta_test_env.py  test_util.py
registry-service/: Cargo.toml
registry-service/src/: handlers.rs  lib.rs
server/: Cargo.toml  config.sample.toml
server/src/: lib.rs  main.rs  range_stream.rs  service.rs  streaming_query.rs
substreams-datasets/: Cargo.toml  README.md  build.rs  config.md
substreams-datasets/src/: client.rs  dataset.rs  lib.rs  pb_to_rows.rs  tables.rs
tests/: Cargo.toml  README.md  basic-function.yaml  build.rs  sql-complex-streaming-tests.yaml  sql-streaming-tests.yaml  sql-tests.yaml
tests/config/: README.md  config.toml  per_tx_receipt_config.toml
tests/datasets/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
tests/specs/: basic-function.yaml  eth-call-tests.yaml  function-in-table.yaml  intra-deps.yaml  joins-tests.yaml  multi-version.yaml  non-incremental-tests.yaml  persist-start-block-test.yaml  solana-local-basic.yaml  sql-advanced-tests.yaml  sql-errors.yaml  sql-regression-tests.yaml  sql-streaming-tests-basic.yaml  sql-streaming-tests-with-sql-datasets.yaml  sql-streaming-tests.yaml  sql-tests.yaml  streaming-distinct-anvil.yaml  streaming-distinct-on-derived-anvil.yaml  streaming-join-anvil.yaml  streaming-join-cross-table.yaml  streaming-join-with-reorg.yaml
tests/sql-snapshots/: attestation_hash.json  eth_call.json  evm_decode.json  evm_decode_params.json  evm_decode_results.json  evm_topic.json  select_1.json
tests/src/: lib.rs  main.rs  steps.rs  temp_metadata_db.rs  test_auth.rs  test_client.rs  test_support.rs  tests.rs
tests/tests/: it_admin_api_datasets_manifest.rs  it_admin_api_schema.rs  (+15 more)
ve/: Cargo.toml
(+2252 files in other folders)
