[workspace]
members = [
    "nozzle",
    "server",
    "dump",
    "dump-check",
    "tests",
    "common",
    "dataset-store",
    "extractors/evm-rpc-datasets",
    "extractors/firehose-datasets",
    "extractors/substreams-datasets",
    "extractors/eth-beacon-datasets",
    "metadata-db",
    "admin-api",
    "http-common",
    "registry-service",
    "js-runtime",
    "generate-manifest",
    "monitoring",
    "client",
    "ve"
]

resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
alloy = { version = "1.0.9", default-features = false, features = [
    "dyn-abi",
    "json-abi",
    "json-rpc",
    "node-bindings",
    "provider-http",
    "rpc",
    "rpc-types",
    "reqwest-rustls-tls",
    "rpc-types-anvil",
] }
async-stream = "0.3.6"
async-trait = "0.1.80"
atty = "0.2.14"
bytes = "1"
chrono = "0.4.41"
clap = { version = "4.5.2", features = ["derive", "env"] }
dotenvy = "0.15"
figment = { version = "0.10.19", features = ["toml", "env", "json"] }
fs-err = "3.0.0"
futures = "0.3"
hex = "0.4.3"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tempfile = "3.13.0"
thiserror = "2.0"
toml = "0.8.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.36.0", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
    "signal",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["rt"] }
url = { version = "2.5.0", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
] }
uuid = { version = "1.11.0", features = ["v7"] }
axum = "0.8.0"
semver = { version = "1.0.18", features = ["serde"] }
rand = "0.9.0"
bincode = "2.0.1"
regex = "1.10.2"
blake3 = "1.8.1"
indoc = "2.0.6"
schemars = "1.0.4"
governor = "0.10.0"
tower = "0.5.2"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30" }
tracing-opentelemetry = { version = "0.31", features = ["default"] }
static_assertions = "1.1.0"
backon = { version = "1.5.1", default-features = false, features = ["std", "tokio-sleep"] }

# Datafusion and Arrow crates
arrow-flight = { version = "55", features = ["flight-sql-experimental"] }
datafusion = { version = "49", features = ["serde"] }
datafusion-tracing = { version = "49" }
datafusion-proto = { version = "49" }
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }

# Crates that should follow the version used by DataFusion and Arrow
prost = "=0.13.3"
prost-build = "0.13.3"
tonic = { version = "0.12.3", features = ["transport", "gzip", "tls-roots"] }
tonic-build = "0.12.3"

# Prost fork
#
# The only change in our fork is to bump the recursion limit from 100 to 1000, to allow deserializing
# larger queries serialized with datafusion-proto. This is preferable to using the
# `no-recursion-limit` feature, for two reasons:
# 1. It's more secure, as it still prevents stack overflow attacks, just with a larger limit.
# 2. `no-recursion-limit` did not work, in our testing it worked on macos but not on linux.
#
# Something like https://github.com/tokio-rs/prost/pull/785 would enable us to remove this fork.
[patch.crates-io]
prost = { git = "https://github.com/edgeandnode/prost", branch = "nozzle-fork-0.13.3" }
