[workspace]
members = [
    "crates/arrow-to-postgres",
    "crates/auth/http",
    "crates/bin/ampctl",
    "crates/bin/ampd",
    "crates/bin/ampsync",
    "crates/bin/ampup",
    "crates/client/amp-client",
    "crates/client/amp-debezium-client",
    "crates/core/common",
    "crates/core/dataset-store",
    "crates/core/datasets-common",
    "crates/core/datasets-common/gen",
    "crates/core/datasets-derived",
    "crates/core/datasets-derived/gen",
    "crates/core/dump",
    "crates/core/js-runtime",
    "crates/core/metadata-db",
    "crates/core/monitoring",
    "crates/extractors/evm-rpc",
    "crates/extractors/evm-rpc/gen",
    "crates/extractors/eth-beacon",
    "crates/extractors/eth-beacon/gen",
    "crates/extractors/firehose",
    "crates/extractors/firehose/gen",
    "crates/services/admin-api",
    "crates/services/admin-api/gen",
    "crates/services/controller",
    "crates/services/server",
    "crates/services/worker",
    "tests",
]

resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
alloy = { version = "1.0.9", default-features = false, features = [
    "dyn-abi",
    "json-abi",
    "json-rpc",
    "node-bindings",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "rpc",
    "rpc-types",
    "reqwest-rustls-tls",
    "rpc-types-anvil",
] }
anyhow = "1.0.80"
async-stream = "0.3.6"
async-trait = "0.1.80"
axum = { version = "0.8.0", default-features = false, features = [
    "json",
    "query",
    "tokio",
    "http1",
] }
backon = { version = "1.5.1", default-features = false, features = [
    "std",
    "tokio-sleep",
] }
bincode = "2.0.1"
blake3 = "1.8.1"
bytes = "1"
chrono = "0.4.41"
clap = { version = "4.5.2", features = ["derive", "env"] }
dotenvy = "0.15"
figment = { version = "0.10.19", features = ["toml", "env", "json"] }
fs-err = "3.0.0"
futures = "0.3"
governor = "0.10.0"
hex = "0.4.3"
indoc = "2.0.6"
itertools = "0.14.0"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31" }
pretty_assertions = "1.4.1"
rand = "0.9.0"
regex = "1.10.2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
schemars = "1.0.4"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
static_assertions = "1.1.0"
tempfile = "3.13.0"
thiserror = "2.0"
tokio = { version = "1.36.0", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["rt"] }
toml = "0.8.10"
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1"
tracing-opentelemetry = { version = "0.32", features = ["default"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v7"] }

# Datafusion and Arrow crates
arrow-flight = { version = "56", features = ["flight-sql-experimental"] }
datafusion = { version = "50", features = ["serde"] }
datafusion-tracing = { version = "50" }
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }

# Crates that should follow the version used by DataFusion and Arrow
prost = "0.13.3"
prost-build = "0.13.3"
tonic = { version = "0.13", features = [
    "transport",
    "gzip",
    "tls-native-roots",
] }
tonic-build = "0.13"
