[package]
name = "admin-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Common async runtime and utilities
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling and logging
thiserror.workspace = true
tracing.workspace = true

axum.workspace = true
rand.workspace = true
http-common = { path = "../http-common" }
common = { path = "../common" }
dataset-store = { path = "../dataset-store" }
metadata-db = { path = "../metadata-db" }
dump = { path = "../dump" }
object_store.workspace = true
