[package]
name = "admin-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
common = { path = "../common" }
dataset-store = { path = "../dataset-store" }
dump = { path = "../dump" }
futures.workspace = true
http-common = { path = "../http-common" }
metadata-db = { path = "../metadata-db" }
object_store.workspace = true
rand.workspace = true
registry-service = { path = "../registry-service" }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = "3.14.0"
thiserror.workspace = true
tokio.workspace = true
toml = { workspace = true, features = ["preserve_order"] }
tracing.workspace = true
