[package]
name = "common"
edition.workspace = true
version.workspace = true

[dependencies]
metadata-db = { path = "../metadata-db", features = ["temp-db"] }
schemars.workspace = true
alloy.workspace = true
atty.workspace = true
bytes.workspace = true
datafusion-proto.workspace = true
datafusion.workspace = true
figment.workspace = true
fs-err.workspace = true
futures.workspace = true
itertools.workspace = true
tracing.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
semver.workspace = true
async-trait.workspace = true
backon = { version = "1.5.1", default-features = false, features = [
    "std",
    "tokio-sleep",
] }
bincode.workspace = true
js-runtime = { path = "../js-runtime" }
indoc.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
axum.workspace = true
regex.workspace = true

[dev-dependencies]
rand = "0.9.0"
cargo_metadata = "0.19.0"
