[package]
name = "dataset-store"
edition.workspace = true
version.workspace = true

[dependencies]
metadata-db = { path = "../metadata-db" }
common = { path = "../common" }
evm-rpc-datasets = { path = "../evm-rpc-datasets" }
firehose-datasets = { path = "../firehose-datasets" }
substreams-datasets = { path = "../substreams-datasets" }
tokio.workspace = true
toml.workspace = true
thiserror.workspace = true
object_store.workspace = true
datafusion.workspace = true
serde.workspace = true
futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
