[package]
name = "dataset-store"
edition.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
metadata-db = { path = "../metadata-db" }
common = { path = "../common" }
js-runtime = { path = "../js-runtime" }
evm-rpc-datasets = { path = "../extractors/evm-rpc-datasets" }
firehose-datasets = { path = "../extractors/firehose-datasets" }
substreams-datasets = { path = "../extractors/substreams-datasets" }
schemars.workspace = true
toml.workspace = true
thiserror.workspace = true
object_store.workspace = true
datafusion.workspace = true
serde.workspace = true
futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
rand.workspace = true
eth-beacon-datasets = { version = "0.1.0", path = "../extractors/eth-beacon-datasets" }
