[package]
name = "dump-check"
edition.workspace = true
version.workspace = true

[lib]
name = "dump_check"

[[bin]]
name = "dump-check"

[dependencies]
common = { path = "../common" }
dataset-store = { path = "../dataset-store" }
tokio.workspace = true
serde_json.workspace = true
futures.workspace = true
clap.workspace = true
object_store.workspace = true
url.workspace = true
indicatif = "0.17"
human_bytes = { version = "0.4", default-features = false }
prometheus.workspace = true
prometheus_exporter = "0.8"
atty = "0.2.14"
log.workspace = true
tracing-subscriber.workspace = true
datafusion.workspace = true
