[package]
name = "dump-check"
edition.workspace = true
version.workspace = true

[lib]
name = "dump_check"

[[bin]]
name = "dump-check"

[dependencies]
metadata-db = { path = "../metadata-db" }
atty = "0.2.14"
clap.workspace = true
common = { path = "../common" }
dataset-store = { path = "../dataset-store" }
futures.workspace = true
human_bytes = { version = "0.4", default-features = false }
indicatif = "0.17"
tracing.workspace = true
tokio.workspace = true
monitoring = { path = "../monitoring" }
