[package]
name = "dump"
edition.workspace = true
version.workspace = true

[dependencies]
metadata-db = { path = "../metadata-db" }
common = { path = "../common" }
datafusion.workspace = true
dataset-store = { path = "../dataset-store" }
futures.workspace = true
log.workspace = true
object_store.workspace = true
prometheus.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
serde_json.workspace = true
sqlx.workspace = true
serde.workspace = true
tracing.workspace = true