[package]
name = "evm-rpc-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
jsonrpsee = { version = "0.22.5", features = ["client"] }
alloy.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
hex.workspace = true
futures.workspace = true
serde.workspace = true
toml.workspace = true
