[package]
name = "evm-rpc-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
alloy.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
serde_with = "3.9.0"
futures.workspace = true
tracing.workspace = true
async-stream.workspace = true
serde_json.workspace = true
schemars.workspace = true

[dev-dependencies]
fs-err.workspace = true
