[package]
name = "firehose-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_derive.workspace = true
clap.workspace = true
toml.workspace = true
anyhow.workspace = true
datafusion.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true

[dev-dependencies]
tokio.workspace = true
fs-err.workspace = true
serde_json.workspace = true
