[package]
name = "firehose-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
futures.workspace = true
hex.workspace = true
log.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
fs-err.workspace = true
serde_json.workspace = true
url.workspace = true
