[package]
name = "generate-manifest"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
dataset-store = { path = "../dataset-store" }
evm-rpc-datasets = { path = "../extractors/evm-rpc-datasets" }
firehose-datasets = { path = "../extractors/firehose-datasets" }
substreams-datasets = { path = "../extractors/substreams-datasets" }
serde_json.workspace = true
eth-beacon-datasets = { version = "0.1.0", path = "../extractors/eth-beacon-datasets" }
