[package]
name = "http-auth"
description = "Provides an auth module to extract auth from the Authorization bearer token on an axum request; validate it against privy, extract the Claims and fetch the user from privy."
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64 = "0.22.1"
chrono.workspace = true
headers = "0.4.1"
http = "1.3.1"
jsonwebtoken = "9.3.1"
lru = "0.16.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
