[package]
name = "metadata-db"
edition.workspace = true
version.workspace = true

[dependencies]
pgtemp = "0.6.0"
object_store.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
