[package]
name = "metadata-db"
edition.workspace = true
version.workspace = true

[dependencies]
pgtemp = "0.6.0"
sqlx = { workspace = true, features = ["chrono"] }
thiserror.workspace = true
url.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
indoc = "2.0.6"

[dev-dependencies]
pgtemp = "0.6.0"
tokio = { workspace = true, features = ["macros", "test-util"] }
