[package]
name = "metadata-db"
edition.workspace = true
version.workspace = true

[features]
default = []
temp-db = ["pgtemp"]

[dependencies]
pgtemp = { version = "0.6.0", optional = true }
sqlx = { workspace = true, features = ["chrono"] }
thiserror.workspace = true
url.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
indoc.workspace = true
object_store.workspace = true

[dev-dependencies]
pgtemp = "0.6.0"
tokio = { workspace = true, features = ["macros", "test-util"] }
