[package]
name = "monitoring"
edition.workspace = true
version.workspace = true

[dependencies]
tracing-subscriber.workspace = true
tracing.workspace = true
atty.workspace = true
datafusion.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
cargo_metadata = "0.19.0"
