[package]
name = "monitoring"
edition.workspace = true
version.workspace = true

[dependencies]
tracing-subscriber.workspace = true
tracing.workspace = true
atty.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
common = { path = "../common" }


[dev-dependencies]
cargo_metadata = "0.19.0"
