[package]
name = "nozzle"
edition.workspace = true
version.workspace = true

[dependencies]
metadata-db = { path = "../metadata-db" }
arrow-flight.workspace = true
axum.workspace = true
clap.workspace = true
common = { path = "../common" }
datafusion.workspace = true
dataset-store = { path = "../dataset-store" }
dump = { path = "../dump" }
futures.workspace = true
log.workspace = true
server = { path = "../server" }
snmalloc-rs.workspace = true
tokio.workspace = true
tonic.workspace = true
tower-http = { version = "0.6.2", features = [
  "compression-br",
  "compression-gzip",
] }
admin-api = { path = "../admin-api" }
registry-service = { path = "../registry-service" }
http-common = { path = "../http-common" }
