[package]
name = "nozzle"
edition.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
metadata-db = { path = "../metadata-db" }
arrow-flight.workspace = true
axum.workspace = true
clap.workspace = true
common = { path = "../common" }
datafusion.workspace = true
dataset-store = { path = "../dataset-store" }
dump = { path = "../dump" }
futures.workspace = true
tracing.workspace = true
server = { path = "../server" }
snmalloc-rs.workspace = true
tokio.workspace = true
tonic.workspace = true
tower-http = { version = "0.6.2", features = [
    "compression-br",
    "compression-gzip",
] }
admin-api = { path = "../admin-api" }
registry-service = { path = "../registry-service" }
http-common = { path = "../http-common" }
prometheus.workspace = true
lazy_static = "1.5.0"

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build"] }
vergen-pretty = "1.0.1"
