[package]
name = "nozzle"
edition.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = ["snmalloc"]
snmalloc = ["dep:snmalloc-rs"]

[dependencies]
metadata-db = { path = "../metadata-db" }
arrow-flight.workspace = true
axum.workspace = true
clap.workspace = true
common = { path = "../common" }
datafusion.workspace = true
dataset-store = { path = "../dataset-store" }
dump = { path = "../dump" }
generate-manifest = { path = "../generate-manifest" }
futures.workspace = true
tracing.workspace = true
server = { path = "../server" }
snmalloc-rs = { version = "0.3.4", optional = true }
tokio.workspace = true
tonic.workspace = true
tower-http = { version = "0.6.2", features = ["compression-gzip"] }
admin-api = { path = "../admin-api" }
registry-service = { path = "../registry-service" }
http-common = { path = "../http-common" }
serde_json.workspace = true
monitoring = { path = "../monitoring" }
static_assertions.workspace = true

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build"] }
