[project]
name = "nozzle"
version = "0.1.0"
description = "Flight SQL client with comprehensive data loading capabilities"
readme = "README.md"
authors = [
    { name = "Ford", email = "ford@thegraph.com" }
]
requires-python = ">=3.12"
dependencies = [
    "base58>=2.1.1",
    "eth-hash[pysha3]>=0.7.1",
    "eth-utils>=5.2.0",
    "google-cloud-bigquery>=3.30.0",
    "google-cloud-storage>=3.1.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "psycopg2-binary>=2.9.0",
    "protobuf>=4.21.0",
    "typer>=0.15.2",
    "redis>=6.2.0",
    "arro3-core>=0.5.1",
    "arro3-compute>=0.5.1",
]

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "marimo>=0.11.31",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "testcontainers>=3.7.0",
    "pytest-xdist>=3.0.0",          # Parallel test execution
]

# Optional dependency groups for specific loaders
postgresql = [
    "psycopg2-binary>=2.9.0",
]

redis = [
    "redis>=4.5.0",
]

delta_lake = [
    "deltalake>=1.0.2",
    "pyarrow>=20.0.0",
    "pandas>=2.2.3",
]

all_loaders = [
    "psycopg2-binary>=2.9.0",       # PostgreSQL
    "redis>=4.5.0",                 # Redis
    "deltalake>=0.15.0",            # Delta Lake
]

test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "testcontainers>=3.7.0",
    "docker>=6.0.0",
    "psutil>=5.9.0",                # For memory usage testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require databases)",
    "performance: Performance and benchmark tests",
    "slow: Slow tests (> 30 seconds)",
    "postgresql: Tests requiring PostgreSQL",
    "redis: Tests requiring Redis",
    "delta_lake: Tests requiring Delta Lake",
    "iceberg: Tests requiring Apache Iceberg",
    "cloud: Tests requiring cloud storage access",
]

[tool.ruff]
line-length = 20000
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
exclude = ["src/nozzle/FlightSql_pb2.py"]

[tool.ruff.lint.per-file-ignores]
"*_nb.py" = ["B018"]
"tests/*" = ["B018"]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["src/nozzle"]
omit = [
    "src/nozzle/FlightSql_pb2.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
