[package]
name = "server"
edition.workspace = true
version.workspace = true

[dependencies]
arrow-flight.workspace = true
async-trait.workspace = true
bytes.workspace = true
common = { path = "../common" }
datafusion.workspace = true
dataset-store = { path = "../dataset-store" }
futures.workspace = true
prost.workspace = true
thiserror.workspace = true
tonic.workspace = true
