[package]
name = "server"
edition.workspace = true
version.workspace = true

[dependencies]
metadata-db = { path = "../metadata-db" }
arrow-flight.workspace = true
async-trait.workspace = true
bytes.workspace = true
common = { path = "../common" }
datafusion.workspace = true
dataset-store = { path = "../dataset-store" }
futures.workspace = true
prost.workspace = true
thiserror.workspace = true
tonic.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
