[package]
name = "server"
edition.workspace = true
version.workspace = true

[dependencies]
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
common = { path = "../common" }
datafusion.workspace = true
dataset-store = { path = "../dataset-store" }
dump = { path = "../dump" }
futures.workspace = true
http-common = { path = "../http-common" }
metadata-db = { path = "../metadata-db" }
prost.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tonic.workspace = true
tracing.workspace = true
