[package]
name = "substreams-datasets"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
firehose-datasets = { path = "../firehose-datasets" }
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_derive.workspace = true
clap.workspace = true
toml.workspace = true
anyhow = "1.0.80"
datafusion.workspace = true
tokio.workspace = true
lazy_static.workspace = true
log.workspace = true
reqwest = "0.12"
prost-reflect = "0.13.1"
sqlparser = "0.46.0"
chrono = "0.4.38"

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true

[dev-dependencies]
tokio.workspace = true
fs-err.workspace = true
serde_json.workspace = true
url.workspace = true
object_store.workspace = true
